Update new inventory, working but not clean

--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -68,7 +68,7 @@
                         @Model.Book.PublishDate?.ToString("yyyy-MM-dd")
                     </dd>
 
-                    <dt class="col-sm-4">
+                    @* <dt class="col-sm-4">
                         Available for Rent
                     </dt>
                     <dd class="col-sm-8">
@@ -87,7 +87,7 @@
                     </dt>
                     <dd class="col-sm-8">
                         @Model.Book.BorrowCount
-                    </dd>
+                    </dd> *@
                 </dl>
             </div>
 
@@ -96,7 +96,7 @@
                 <a asp-action="Edit" asp-route-id="@Model?.Book.Id" class="btn btn-primary">Edit</a>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    @if (Model.IsBorrowedByUser)
+                    @* @if (Model.IsBorrowedByUser)
                     {
                         <form method="post" asp-action="Return" asp-controller="Books">
                             <input type="hidden" name="bookId" value="@Model.Book.Id" />
@@ -113,7 +113,7 @@
                     else
                     {
                         <span class="text-muted">Not available</span>
-                    }
+                    } *@
                 }
                 <a asp-action="Index" class="btn btn-secondary">Back to List</a>
             </div>
