--- a/Views/Users/GetUserBorrowBooks.cshtml
+++ b/Views/Users/GetUserBorrowBooks.cshtml
@@ -1,4 +1,4 @@
-﻿@model LibrarySystem.Models.UserInformationViewModel
+﻿@* @model LibrarySystem.Models.UserInformationViewModel
 
 <div>
     <h2>@Model.User.Name's Borrowed Books</h2>
@@ -39,3 +39,4 @@
         <p>@Model.User.Name has not borrowed any books.</p>
     }
 </div>
+ *@
