--- a/Views/Inventories/Create.cshtml
+++ b/Views/Inventories/Create.cshtml
@@ -17,9 +17,19 @@
                 <select asp-for="BookId" class ="form-control" asp-items="ViewBag.BookId"></select>
             </div>
             <div class="form-group">
+                <label asp-for="TotalCopies" class="control-label"></label>
+                <input asp-for="TotalCopies" class="form-control" />
+                <span asp-validation-for="TotalCopies" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="AvailableCopies" class="control-label"></label>
                 <input asp-for="AvailableCopies" class="form-control" />
                 <span asp-validation-for="AvailableCopies" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Condition" class="control-label"></label>
+                <select asp-for="Condition" class="form-control" asp-items="ViewBag.Condition"></select>
+                <span asp-validation-for="Condition" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
