--- a/Views/Inventories/Delete.cshtml
+++ b/Views/Inventories/Delete.cshtml
@@ -18,10 +18,22 @@
             @Html.DisplayFor(model => model.Book.ISBN)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.TotalCopies)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.TotalCopies)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AvailableCopies)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AvailableCopies)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Condition)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Condition)
         </dd>
     </dl>
     
