Add seed images for books

--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="d-flex flex-column mt-2" style="height: 90vh">
 	<!-- Content container -->
-	<div class="container px-4 rounded shadow-sm" style="background-color: #f8f9fa; height: 100%">
+	<div class="container-fluid rounded shadow-sm" style="background-color: #f8f9fa; height: 100%">
 		<h1 class="mb-4">Books</h1>
 
 		<div class="row mb-3">
