--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Home Page";
 }
 
-<div class="container mt-5">
+<div class="container-fluid mt-5 p-0">
 	<h1 class="mb-4" style="font-size: 3vw;">Welcome to Library System</h1>
 
 	<h2 class="text-primary mb-3" style="font-size: 2.5vw;">Books</h2>
@@ -20,14 +20,14 @@
 								<img src="data:image/jpeg;base64,@Convert.ToBase64String(book.Image)"
 									 alt="Book Image"
 									 class="img-thumbnail"
-									 style="width: 100%; height: 20rem; object-fit: cover;" />
+									 style="width: 100%; height: 15rem; object-fit: cover;" />
 							}
 							else
 							{
 								<img src="/images/default-book-3.png"
 									 alt="No Image Available"
 									 class="img-thumbnail"
-									 style="width: 100%; height: 250px; object-fit: cover;" />
+									 style="width: 100%; height: 15rem; object-fit: cover;" />
 							}
 							<h5 class="card-title" style="font-size: 1.5vw;">@book.Title</h5>
 							<p class="card-text" style="font-size: 1vw;">@book.Description</p>
@@ -54,14 +54,14 @@
 								<img src="data:image/jpeg;base64,@Convert.ToBase64String(author.Image)"
 									 alt="Author Image"
 									 class="img-thumbnail"
-									 style="width: 100%; height: 250px; object-fit: cover;" />
+									 style="width: 100%; height: 15rem; object-fit: cover;" />
 							}
 							else
 							{
 								<img src="/images/default-author.jpg"
 									 alt="No Image Available"
 									 class="img-thumbnail"
-									 style="width: 100%; height: 250px; object-fit: cover;" />
+									 style="width: 100%; height: 15rem; object-fit: cover;" />
 							}
 							<h5 class="card-title" style="font-size: 1.5vw;">@author.Name</h5>
 							<p class="card-text text-center" style="font-size: 1vw;">@author.Description</p>
